_includes/manuals/2.3/5.7.5_populate_users_attributes_groups.md

So far we have tried external authentication for existing Foreman users.

However, it is also possible to have the user's records in Foreman created automatically, on the fly when they first log in using external authentication (single sign-on, PAM).

The first step to enable this feature is to add

:authorize_login_delegation_auth_source_user_autocreate: External

to `/etc/foreman/settings.yaml` or under *Administer > Settings > Authentication*.

Since we will want the newly created user records to have valid name and email address, we need to set up **sssd** to provide these attributes and **mod_lookup_identity** to pass them to Foreman. We start by installing the packages:
{% highlight bash %}
yum install -y sssd-dbus mod_lookup_identity
{% endhighlight %}

Amend the configuration of sssd in `/etc/sssd/sssd.conf`:

{% highlight text %}
# /etc/sssd/sssd.conf, the [domain/...] section, add:
ldap_user_extra_attrs = email:mail, firstname:givenname, lastname:sn

# /etc/sssd/sssd.conf, the [sssd] section, amend the services line to include ifp:
services = nss, pam, ssh, ifp

# /etc/sssd/sssd.conf, add new [ifp] section:
[ifp]
allowed_uids = apache, root
user_attributes = +email, +firstname, +lastname
{% endhighlight %}

Configure Apache to retrieve these attributes, for example in `/etc/httpd/conf.d/lookup_identity.conf`:
{% highlight text %}
LoadModule lookup_identity_module modules/mod_lookup_identity.so
<LocationMatch ^/users/(ext)?login$>
  LookupUserAttr email REMOTE_USER_EMAIL
  LookupUserAttr firstname REMOTE_USER_FIRSTNAME
  LookupUserAttr lastname REMOTE_USER_LASTNAME
  LookupUserGroups REMOTE_USER_GROUPS :
  LookupUserGroupsIter REMOTE_USER_GROUP

  # Set headers for proxy requests
  RequestHeader set REMOTE_USER %{REMOTE_USER}e
  RequestHeader set REMOTE_USER_EMAIL %{REMOTE_USER_EMAIL}e
  RequestHeader set REMOTE_USER_FIRSTNAME %{REMOTE_USER_FIRSTNAME}e
  RequestHeader set REMOTE_USER_LASTNAME %{REMOTE_USER_LASTNAME}e
  RequestHeader set REMOTE_USER_GROUPS %{REMOTE_USER_GROUPS}e
</LocationMatch>
{% endhighlight %}

Restart both sssd and Apache:
{% highlight bash %}
service sssd restart
service httpd restart
{% endhighlight %}

Now when you log in either using Kerberos ticket or using user's FreeIPA password (make sure the user has access allowed in FreeIPA HBAC rule), even if the user did not log in to Foreman before, their record will be populated with name and email address from the FreeIPA server (you can check in the top right corner that the full name is there) and they will also be updated upon every subsequent externally-authentication logon.

You might notice that the newly created user does not have many access right. To fully use the central identity provider like FreeIPA, it can be useful to link group membership of externally-authenticated Foreman users to the group membership of users in FreeIPA, and then set Foreman roles to these user groups. That way when a new network administrator has their record created in FreeIPA with proper user groups and then logs in to Foreman for the first time, their Foreman account will automatically get group memberships in Foreman groups, giving them appropriate roles and access rights.

The prerequisite is obviously to have the user groups and memberships set appropriately for your organization in FreeIPA.

For each FreeIPA user group that should have some semantics in Foreman, we create new user groups in Foreman, and then use the tab *External groups* and *Add external user group* to add name of the user group in FreeIPA, for Auth source **EXTERNAL**. We can then assign roles to this Foreman user group to match the desired role for users from the given FreeIPA user group.

Upon their first login, externally-authenticated users will get their group membership in Foreman set to match the mapping to FreeIPA groups and their group membership in FreeIPA. Upon subsequent externally-authenticated logons, the membership in these mapped groups will be updated to match the current membership in FreeIPA.
